# HashOptimizedBloomFilter

./: .gitignore  CMakeLists.txt  ChangeLog  LICENSE  README.md
cmake/: CheckEnvironment.cmake
src/: BloomFilter.hpp  CMakeLists.txt  Cli.cc
src/utils/: Helpers.hpp  MurmurHash3.hpp
